# RiboTaper_R4.5

./: CHANGES_MODERNIZATION.md  Dockerfile  INSTALL_MODERN.md  Makefile.in  README.md  aclocal.m4  apptainer.def  configure  configure.ac  environment.yml
extras/: install_R_packages.R
scripts/: CCDS_orf_finder.R.in.in  NONCCDS_orf_finder.R.in.in  P_sites_RNA_sites_calc.bash.in  analyze_multi_clust.bash.in  create_annotations_files.bash.in.in  create_metaplots.bash.in.in  create_metaplots_nodo.bash.in  create_tracks.bash.in
